# how-i-learn-VTK

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
2.3.2_TestVTKInstall/: CMakeLists.txt  TestVTKInstall.cpp
3.1.1_RenderCylinder/: CMakeLists.txt  RenderCylinder.cpp
3D/: IM-0001-0000.dcm  IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm
4.1.4_vtkObjectDemo/: CMakeLists.txt  vtkObjectDemo.cpp
4.2.1_vtkPipelineDemo/: CMakeLists.txt  vtkPipelineDemo.cpp
CTData/20161228-YuWei-ZLYY/: DIRFILE  I10  I100  I1000  I1010  I1020  I1030  I1040  I1050  I1060  I1070  I1080  I1090  I110  I1100  I1110  I1120  I1130  I1140  I1150  I1160  I1170  I1180  I1190  I120  I1200  I1210  I1220  I1230  I1240  I1250  I1260  I1270  I1280  I1290  I130  I1300  I1310  I1320  I1330  (+312 more)
CombineQtAndVTK/: CMakeLists.txt  ProjectMainWindow.cpp  ProjectMainWindow.h  ProjectMainWindow.ui  main.cpp
D/: CMakeLists.txt  D.cpp
DISTANCE/: CMakeLists.txt  Distance.cpp
DistancePointToLine/: CMakeLists.txt
ImageProcessing/Histogram/: CMakeLists.txt  Histogram.cpp
ImageProcessing/RegionGrow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
ImageProcessing/Sobel/: CMakeLists.txt  Sobel.cpp
MPR/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
MPRbyms/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
MarchingCases/: CMakeLists.txt
MarchingCasesA/: CMakeLists.txt
Medical1/: CMakeLists.txt  Medical1.cxx
MedicalDemo1/: CMakeLists.txt  MedicalDemo1.cxx
MedicalDemo2/: CMakeLists.txt  MedicalDemo2.cxx
ObserverCommandDemo2/: CMakeLists.txt  ObserverCommandDemo2.cpp
PickPixel/: CMakeLists.txt  PickPixel.cpp
PtPD/: CMakeLists.txt  PtPD.cpp
ReadDICOM/: CMakeLists.txt
ReadPolyData/: CMakeLists.txt  ReadPolyData.cxx
ReadUnknownTypeXMLFile/ReadUnknownTypeXMLFile/: CMakeLists.txt
Reslice/: CMakeLists.txt  Reslice.cpp
Slice/: CMakeLists.txt  Slice.cpp
VisualizationAlgorithms/: CMakeLists.txt  TubesWithVaryingRadiusAndColors.cxx
WriteTIFF/: CMakeLists.txt
transform/: CMakeLists.txt  transform.cpp
vtkSliceViewer/: FourPanelViewer.pro  main.cpp
